--- a/Homework8/initialPage.html
+++ b/Homework8/initialPage.html
@@ -7,11 +7,12 @@
         <link rel="stylesheet" href="Stylesheets/bootstrap/css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="Stylesheets/intialStyleSheets.css">
         <link rel="stylesheet" type="text/css" href="Stylesheets/ErrorMessage.css">
+        <link rel="stylesheet" type="text/css" href="Stylesheets/ResultShow.css">
         <script src="Scripts/jquery-1.11.2.min.js"></script>
-        <script type="text/javascript" src="Scripts/initialJavascript.js"></script>
-
         <script type="text/javascript" src="Scripts/jquery.validate.js"></script>
         <script type="text/javascript" src="Scripts/MyValidation.js"></script>
+        <script type="text/javascript" src="Stylesheets/bootstrap/js/bootstrap.min.js"></script>
+        <script src="http://openlayers.org/api/OpenLayers.js"></script>
     </head>
     <body>
         <div class="container">
@@ -94,36 +95,123 @@
                         <label class="radio-inline"><input type="radio" id="Fahrenheit" name="temperature" value="Fahrenheit" checked="checked"/><small>Fahrenheit</small></label>
                         <label class="radio-inline"><input type="radio" id="Celsius" name="temperature" value="Celsius"/><small>Celsius</small></label>
                     </div>
-                    <div class="col-md-3" id="DivTwoButtonsID">
-                        <div class="row">
-                            <div class="col-md-8 col-md-offset-4 btn-sm" id="DivSearchClearID">
-                                <button type="submit" name="Submit" class="btn btn-primary" id="SubmitButtonID">
-                                    <span class="glyphicon glyphicon-search"></span> Search
-                                </button>
-                                <button class="btn btn-default" id="ClearButtonID">
-                                    <span class="glyphicon glyphicon-refresh" id="ClearButtonTextID"></span>Clear
-                                </button>
-                            </div>
+                    <div class="col-md-1" id="DivEmptyID"></div>
+                    <div class="col-md-2 pull-right" id="DivTwoButtonsID">
+                        <div class="row pull-right" id="DivSearchClearID">
+                            <button type="submit" name="Submit" class="btn btn-primary" id="SubmitButtonID">
+                                <span class="glyphicon glyphicon-search"></span> Search
+                            </button>
+                            <button class="btn btn-default" id="ClearButtonID">
+                                <span class="glyphicon glyphicon-refresh" id="ClearButtonTextID"></span>Clear
+                            </button>
                         </div>
-                        <div class="row">
-                            <div class="col-md-8 col-md-offset-4">
-                                <div class="row">
-                                    <div class="col-md-5" id="DivPoweredByID">
-                                        <p id="PoweredID">Powered by:</p>
-                                    </div>
-                                    <div class="col-md-7" id="DivForecastLocalID">
-                                        <img src="http://cs-server.usc.edu:45678/hw/hw8/images/forecast_logo.png" id="ForecastLogoID">
-                                    </div>
-                                </div>
+                        <div class="row pull-right" id="DivLogoPartID">
+                            <div id="DivPoweredByID">
+                                <nobr>
+                                    <p class="pull-left" id="PoweredID">Powered by:</p>
+                                <!--</div>-->
+                                <!--<div id="DivForecastLocalID">-->
+                                    <a href="http://forecast.io">
+                                        <img src="http://cs-server.usc.edu:45678/hw/hw8/images/forecast_logo.png" class="img-responsive pull-right" id="ForecastLogoID">
+                                    </a>
+                                </nobr>
                             </div>
                         </div>
                     </div>
                 </div>
             </form>
         </div>
-        <div id="WhiteLineID">
+        <div class="row" id="WhiteLineID">
             <hr>
         </div>
+
+        <div id="DivResultID" class="container">
+            <div id="DivLeftPartID"></div>
+        </div>
+
+<!--all fake html-->
+    <div class="container">
+        <div class="row">
+            <div class='col-md-6'>
+                  Right Now Table 右边地图组加油 ->
+            </div>
+            <div class='col-md-6'>
+                test1
+            </div>
+        </div>
+    </div>
+
+
+<div class="container">
+
+            <ul class='nav nav-tabs' role='tablist'>
+                <li role='presentation'>
+                    <a href='#RightNow' role='tab' aria-controls='Right Now' data-toggle='tab'>Right Now</a>
+                </li>
+                <li role='presentation' class='active'>
+                    <a href='#Next24Hours' role='tab' aria-controls='Next 24 Hours' data-toggle='tab'>Next 24 Hours</a>
+                </li>
+                <li role='presentation'>
+                    <a href='#Next 7 Days' role='tab' aria-controls='Next 7 Days' data-toggle='tab'>Next 7 Days</a>
+                </li>
+            </ul>
+
+            <div class='row'>
+                <div class='col-md-6'>
+
+            <div class='tab-content container' id="DivNext24HoursTabID">
+                <div role='tabpanel' class='tab-pane active' id='Next24Hours'>
+                    <table class="table table-responsive" id="Table24HoursID">
+                        <thead>
+                            <tr id="Thead24TableID">
+                                <th class="headFor24">
+                                    Time
+                                </th>
+                                <th class="headFor24">
+                                    Summary
+                                </th>
+                                <th class="headFor24">
+                                    Cloud Cover
+                                </th>
+                                <th class="headFor24">
+                                    Temp(&#176; F)
+                                </th>
+                                <th class="headFor24">
+                                    View Details
+                                </th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>
+                                    10:00 PM
+                                </td>
+                                <td>
+                                    pic
+                                </td>
+                                <td>
+                                    0%
+                                </td>
+                                <td>
+                                    70.28
+                                </td>
+                                <td>
+                                    <a data-toggle="collapse" aria-expanded="false"><span class="glyphicon glyphicon-plus"></span></a>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+
+
+
+                <div role='tabpanel' class='tab-pane' id='Next7Days'>
+                    Next7DaysModal
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
     <noscript></noscript>
     </body>
 </html>
