--- a/Homework8/initialPage.html
+++ b/Homework8/initialPage.html
@@ -6,22 +6,69 @@
         <title>Forecast Search</title>
         <link rel="stylesheet" href="Stylesheets/bootstrap/css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="Stylesheets/intialStyleSheets.css">
-        <link rel="stylesheet" type="text/css" href="Stylesheets/ErrorMessage.css">
         <link rel="stylesheet" type="text/css" href="Stylesheets/ResultShow.css">
-
-        <!--<script src="Scripts/jquery-2.1.4.js"></script>-->
         <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
-
         <script type="text/javascript" src="Scripts/jquery.validate.js"></script>
+        <script type="text/javascript" src="Scripts/moment.js"></script>
+        <script type="text/javascript" src="Scripts/moment-timezone-with-data-2010-2020.js"></script>
         <script type="text/javascript" src="Scripts/MyValidation.js"></script>
         <script type="text/javascript" src="Stylesheets/bootstrap/js/bootstrap.min.js"></script>
         <script src="http://openlayers.org/api/OpenLayers.js"></script>
     </head>
     <body>
+    <script>
+        window.fbAsyncInit = function() {
+            FB.init({
+                appId      : '1633054236944110',
+                xfbml      : true,
+                version    : 'v2.5'
+            });
+        };
+
+        (function(d, s, id){
+            var js, fjs = d.getElementsByTagName(s)[0];
+            if (d.getElementById(id)) {return;}
+            js = d.createElement(s); js.id = id;
+            js.src = "//connect.facebook.net/en_US/sdk.js";
+            fjs.parentNode.insertBefore(js, fjs);
+        }(document, 'script', 'facebook-jssdk'));
+
+        function FacebookPost(){
+            FB.getLoginStatus(function (response){
+                if(response.status != 'connected'){
+                    postPart();
+                }
+                else{
+                    postPart();
+                }
+            });
+        function postPart(){
+            FB.ui({
+                        method     : 'feed',
+                        link       : 'https://forecast.io',
+                        name       : 'Current Weather in ' + $('#City').val(),
+                        picture    : 'http://cs-server.usc.edu:45678/hw/hw8/images/'+ facebookPic,
+                        description:  facebookSummary +', ' + facebookTemp,
+                        caption    : 'WEATHER INFORMATION FROM FORECAST.IO'
+                    },
+                    function(response){
+                        if(response && !response.error_message){
+                            alert("Posted Successfully");
+                        }
+                        else{
+                            alert("Not Posted");
+                        }
+
+                    }
+            );
+        }
+
+        };
+    </script>
         <div class="container">
             <div class="row" id="Header">
                 <div class="col-md-4"></div>
-                <div class="col-md-4">
+                <div class="col-md-4" style="text-align: center">
                     <h1>Forecast Search</h1>
                 </div>
                 <div class="col-md-4"></div>
@@ -30,11 +77,11 @@
                 <div class="row img-rounded" id="DivContentID">
                     <div class="col-md-3 form-group" id="DivStreetAddress">
                         <label for="StreetAddress" id="StreetAddressID"><small>Street Address:<span style="color:#ff0000"> *</span></small></label>
-                        <input class="form-control" name="StreetAddress" type="text" id="StreetAddress" placeholder="Enter street address" value="325 W Adams Blvd"/>
+                        <input class="form-control" name="StreetAddress" type="text" id="StreetAddress" placeholder="Enter street address" value=""/>
                     </div>
                     <div class="col-md-2 form-group" id="DivCity">
                         <label for="City" id="CityID"><small>City:<span style="color:#ff0000"> *</span></small></label>
-                        <input class="form-control" name="City" type="text" id="City" placeholder="Enter the city name" value="Los Angeles"/>
+                        <input class="form-control" name="City" type="text" id="City" placeholder="Enter the city name" value=""/>
                     </div>
                     <div class="col-md-2 form-group" id="DivState">
                         <label for="State" id="StateID" ><small>State:<span style="color:#ff0000"> *</span></small></label>
@@ -44,7 +91,7 @@
                             <option value="AK">Alaska</option>
                             <option value="AZ">Arizona</option>
                             <option value="AR">Arkansas</option>
-                            <option value="CA" selected>California</option>
+                            <option value="CA">California</option>
                             <option value="CO">Colorado</option>
                             <option value="CT">Connecticut</option>
                             <option value="DE">Delaware</option>
@@ -100,11 +147,11 @@
                     </div>
                     <div class="col-md-1" id="DivEmptyID"></div>
                     <div class="col-md-2 pull-right" id="DivTwoButtonsID">
-                        <div class="row pull-right" id="DivSearchClearID">
+                        <div class="row" id="DivSearchClearID">
                             <button type="submit" name="Submit" class="btn btn-primary" id="SubmitButtonID">
                                 <span class="glyphicon glyphicon-search"></span> Search
                             </button>
-                            <button class="btn btn-default" id="ClearButtonID">
+                            <button class="btn btn-default" id="ClearButtonID" type="reset" onclick="window.location.reload()">
                                 <span class="glyphicon glyphicon-refresh" id="ClearButtonTextID"></span>Clear
                             </button>
                         </div>
@@ -112,8 +159,6 @@
                             <div id="DivPoweredByID">
                                 <nobr>
                                     <p class="pull-left" id="PoweredID">Powered by:</p>
-                                <!--</div>-->
-                                <!--<div id="DivForecastLocalID">-->
                                     <a href="http://forecast.io">
                                         <img src="http://cs-server.usc.edu:45678/hw/hw8/images/forecast_logo.png" class="img-responsive pull-right" id="ForecastLogoID">
                                     </a>
@@ -124,191 +169,16 @@
                 </div>
             </form>
         </div>
-        <div class="row" id="WhiteLineID">
-            <hr>
+
+        <div class="container">
+            <div class="row" id="WhiteLineID">
+                <hr>
+            </div>
         </div>
 
         <div id="DivResultID" class="container">
             <div id="DivLeftPartID"></div>
         </div>
-
-<!--all fake html-->
-
-<div class="container">
-            <ul class='nav nav-tabs' role='tablist'>
-                <li role='presentation'>
-                    <a href='#RightNow' role='tab' aria-controls='Right Now' data-toggle='tab'>Right Now</a>
-                </li>
-                <li role='presentation' class='active'>
-                    <a href='#Next24Hours' role='tab' aria-controls='Next 24 Hours' data-toggle='tab'>Next 24 Hours</a>
-                </li>
-                <li role='presentation'>
-                    <a href='#Next 7 Days' role='tab' aria-controls='Next 7 Days' data-toggle='tab'>Next 7 Days</a>
-                </li>
-            </ul>
-
-            <!--<div class='row'>-->
-                <!--<div class='col-md-6'>-->
-
-            <div class='tab-content container' id="DivNext24HoursTabID">
-                <div role='tabpanel' class='tab-pane active' id='Next24Hours'>
-                    <table class="table table-responsive" id="Table24HoursID">
-                        <thead id='Thead24HourID'>
-                            <tr id="Thead24TableID">
-                                <th class="headFor24">
-                                    Time
-                                </th>
-                                <th class="headFor24">
-                                    Summary
-                                </th>
-                                <th class="headFor24">
-                                    Cloud Cover
-                                </th>
-                                <th class="headFor24">
-                                    Temp(&#176; F)
-                                </th>
-                                <th class="headFor24">
-                                    View Details
-                                </th>
-                            </tr>
-                            <tr name='DivideTheadAndTbody'>
-                                <td>
-                                    <div>
-
-                                    </div>
-                                </td>
-                            </tr>
-                        </thead>
-
-                        <tbody id="TbodyBiggerID">
-                            <tr>
-                                <td>
-                                    10:00 PM
-                                </td>
-                                <td>
-                                    pic
-                                </td>
-                                <td>
-                                    0%
-                                </td>
-                                <td>
-                                    70.28
-                                </td>
-                                <td>
-                                    <a href="#collapseOne" data-toggle="collapse" aria-expanded="false"><span class="glyphicon glyphicon-plus"></span></a>
-                                </td>
-                            </tr>
-                                <tr id='collapseOne' class="collapse out">
-                                    <td id="TdCollapseID" colspan="5">
-                                        <div class="collapsePart" id="DivCollapsePart">
-                                            <table id="TableCollapseResponsiveID" class="table table-responsive">
-                                                <thead>
-                                                    <tr id="TrViewDetailsShowID">
-                                                        <th>
-                                                            Wind
-                                                        </th>
-                                                        <th>
-                                                            Humidity
-                                                        </th>
-                                                        <th>
-                                                            Visibility
-                                                        </th>
-                                                        <th>
-                                                            Pressure
-                                                        </th>
-                                                    </tr>
-                                                </thead>
-                                                <tbody>
-                                                    <tr id="TrViewDetailsBodyID">
-                                                        <td>
-                                                            4mph
-                                                        </td>
-                                                        <td>
-                                                            83%
-                                                        </td>
-                                                        <td>
-                                                            8.37mi
-                                                        </td>
-                                                        <td>
-                                                            1012.6mb
-                                                        </td>
-                                                    </tr>
-                                                </tbody>
-                                            </table>
-                                        </div>
-                                    </td>
-                                </tr>
- <!--a new td-->
-                            <tr>
-                                <td>
-                                    10:00 PM
-                                </td>
-                                <td>
-                                    pic
-                                </td>
-                                <td>
-                                    0%
-                                </td>
-                                <td>
-                                    70.28
-                                </td>
-                                <td>
-                                    <a href="#collapseTwo" data-toggle="collapse" aria-expanded="false"><span class="glyphicon glyphicon-plus"></span></a>
-                                </td>
-                            </tr>
-                            <tr id='collapseTwo' class="collapse out">
-                                <td class="TdCollapseID" colspan="5">
-                                    <div class="collapsePart" class="DivCollapsePart">
-                                        <table class="TableCollapseResponsiveID table table-responsive">
-                                            <thead>
-                                            <tr class="TrViewDetailsShowID">
-                                                <th>
-                                                    Wind
-                                                </th>
-                                                <th>
-                                                    Humidity
-                                                </th>
-                                                <th>
-                                                    Visibility
-                                                </th>
-                                                <th>
-                                                    Pressure
-                                                </th>
-                                            </tr>
-                                            </thead>
-                                            <tbody>
-                                            <tr class="TrViewDetailsBodyID">
-                                                <td>
-                                                    4mph
-                                                </td>
-                                                <td>
-                                                    83%
-                                                </td>
-                                                <td>
-                                                    8.37mi
-                                                </td>
-                                                <td>
-                                                    1012.6mb
-                                                </td>
-                                            </tr>
-                                            </tbody>
-                                        </table>
-                                    </div>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-
-
-
-                <div role='tabpanel' class='tab-pane' id='Next7Days'>
-                    Next7DaysModal
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-    <noscript></noscript>
+        <noscript></noscript>
     </body>
 </html>
